# Anchor

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  eval.yml
anchor/: __init__.py  config.py  logging.py  schemas.py
anchor/api/: app.py
anchor/db/: migrate.py  pool.py  repository.py
anchor/db/migrations/: 0001_init.sql
anchor/eval/: cli.py  runner.py
anchor/ingest/: chunk.py  cli.py  fetch.py  manifest.py  parse.py  service.py
anchor/pipeline/: __init__.py  citations.py  refusal.py  rrf.py  service.py
anchor/providers/: gemini.py  rerank.py  vertex.py
anchor/services/: metrics.py  rate_limit.py  tracing.py
corpus/: manifest.yaml
deploy/docker/: Dockerfile
deploy/nginx/: anchor.conf  anchor.tls.conf.template
deploy/systemd/: anchor-api.service  anchor-ingest.service
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVAL.md  HANDOFF.md  PRD.md  ROADMAP.md  SPEC.md
docs/traces/: query_trace_sanitized.json
eval/: golden.jsonl  run.py  smoke.jsonl
scripts/: build_eval_dataset.py
tests/: test_citations.py  test_fetch.py  test_gemini_provider.py  test_ingestion_service.py  test_manifest.py  test_parse.py  test_query_service.py  test_refusal.py  test_rrf.py  test_tracing.py
ui/: package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
